加入了小程序请求控制器

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
         driver-class-name: com.mysql.cj.jdbc.Driver
         username: root
         password: ShuXue_7
-        url: jdbc:mysql://localhost:3306/juntai?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+        url: jdbc:mysql://60.205.221.125:3306/juntai?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 server:
     port: 8090
 mybatis:
