--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,9 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: zxc123
-#      ShuXue_7
-#        url: jdbc:mysql://60.205.221.125:3306/juntai?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    url: jdbc:mysql://localhost:3306/juntai?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    password: ShuXue_7
+    url: jdbc:mysql://60.205.221.125:3306/juntai?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+
 server:
   port: 8090
 mybatis:
